# rapier

./: Cargo.toml
crates/alchemy_rapier_ffi/: Cargo.toml
crates/alchemy_rapier_ffi/src/: lib.rs
crates/fracture_core/: Cargo.toml
crates/fracture_core/src/: lib.rs  replay.rs  snapshot.rs
crates/fracture_rapier/: Cargo.toml
crates/fracture_rapier/examples/: fracture_bench.rs  phase6_profile.rs  phase7_acceptance_demos.rs
crates/fracture_rapier/src/: collider_sync.rs  connect_api.rs  contact_map.rs  hooks.rs  impulse_readback.rs  joint_feedback.rs  lib.rs  pipeline.rs  replay.rs  snapshot.rs  tests.rs  world.rs
crates/fracture_voxel/: Cargo.toml
crates/fracture_voxel/src/: lib.rs  snapshot.rs
docs/: invariants.md  reference_notes.md
examples2d/: Cargo.toml  all_examples2.rs  fracture2.rs
src_testbed/: lib.rs
src_testbed/harness/: mod.rs
src_testbed/physics/: mod.rs
src_testbed/testbed/: app.rs  testbed.rs
