[package]
name = "fracture_core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
parallel = ["dep:rayon"]

[dependencies]
rayon = { workspace = true, optional = true }
thiserror.workspace = true
