[package]
name = "fracture_rapier"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
fracture_core = { path = "../fracture_core" }
fracture_voxel = { path = "../fracture_voxel" }
rapier2d = { path = "../rapier2d", features = ["serde-serialize"] }
thiserror.workspace = true
bincode.workspace = true
serde.workspace = true
rayon = { workspace = true, optional = true }

[features]
deterministic-replay = ["rapier2d/enhanced-determinism", "rapier2d/serde-serialize"]
parallel = ["dep:rayon", "fracture_voxel/parallel", "rapier2d/parallel"]
simd-stable = ["rapier2d/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly"]
