[package]
name = "fracture_voxel"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
fracture_core = { path = "../fracture_core" }
thiserror.workspace = true
