[package]
name = "fracture_voxel"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
parallel = ["dep:rayon", "fracture_core/parallel"]

[dependencies]
fracture_core = { path = "../fracture_core" }
rayon = { workspace = true, optional = true }
thiserror.workspace = true
